--- a/exercises/day1/Day_1_Exercise_1.ipynb
+++ b/exercises/day1/Day_1_Exercise_1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "### Run each command and try to understand why certain operations behave the way they do before looking at the answers.\n",
     "\n",
-    "### There are four parts to this exercise, with the answers written under each section\n",
+    "### There are 4 parts to this exercise, with the answers written under each section\n",
     "1. Numbers\n",
     "2. Strings\n",
     "3. Lists\n",
