--- a/exercises/day1/Day_1_Exercise_2.ipynb
+++ b/exercises/day1/Day_1_Exercise_2.ipynb
@@ -1061,7 +1061,7 @@
    "source": [
     "### The answers\n",
     "\n",
-    "There are a few slightly different ways you can write the code for this. Here we present one solution, if you have written something else that's not wrong. Just make sure to test that your code actually does what you intend it to do."
+    "There are various ways to write the code for this task. Here, we present one solution, but if you have written a different one, that's perfectly fine. Just ensure that you test your code to confirm that it performs as expected."
    ]
   },
   {
