--- a/exercises/day1/Day_1_Exercise_3.ipynb
+++ b/exercises/day1/Day_1_Exercise_3.ipynb
@@ -4,13 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 1,  Exercise 3 - loops\n",
+    "# Day 1,  Exercise 3 - loops\n",
     "\n",
     "### There are three parts to this exercise, with answers listed under each part.\n",
     "1. For loops\n",
     "2. While loops\n",
-    "3. Bonus exercise (optional)\n",
-    "\n"
+    "3. Bonus exercise (optional)"
    ]
   },
   {
@@ -222,7 +221,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The answers"
+    "### The answers\n",
+    "There are various ways to write the code for this task. Here, we present one solution, but if you have written a different one, that's perfectly fine. Just ensure that you test your code to confirm that it performs as expected."
    ]
   },
   {
