--- a/exercises/day1/Day_1_Exercise_4.ipynb
+++ b/exercises/day1/Day_1_Exercise_4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 1, Exercise 4 - conditional statement"
+    "# Day 1, Exercise 4 - conditional statement (if/else)"
    ]
   },
   {
@@ -13,7 +13,9 @@
    "source": [
     "### There are 2 parts to this exercise, with answers listed under each part.\n",
     "1. Check nucleotide type\n",
-    "2. Calculate sequence alignment score (optional)\n"
+    "2. Calculate sequence alignment score (optional)\n",
+    "\n",
+    "There are various ways to write the code for these tasks. Here, we present one solution in the answers, but if you have written a different one, that's perfectly fine. Just ensure that you test your code to confirm that it performs as expected."
    ]
   },
   {
@@ -28,9 +30,14 @@
    "metadata": {},
    "source": [
     "## 1. Check nucleotide type\n",
-    "Given a DNA sequence `AGCTAGCXTA`, for every nucleotide, print `{nucleotide} at position {position} is a purine` when it's an A or G, `{nucleotide} at position {position} is a pyrimidine}` when it's a C or T, and `{nucleotide} is not a valid nucleotide` when it's none of AGCT. Example output for the first nucleotide:\n",
+    "Given a DNA sequence `AGCTAGCXTA`, for every nucleotide, print \n",
+    "- `{nucleotide} at position {position} is a purine` when it's an A or G, \n",
+    "- `{nucleotide} at position {position} is a pyrimidine}` when it's a C or T, and \n",
+    "- `{nucleotide} is not a valid nucleotide` when it's none of the \"AGCT\". \n",
+    "\n",
+    "Example output for the first nucleotide:\n",
     "```\n",
-    "A at position 0 is a pruine`\n",
+    "A at position 0 is a pruine\n",
     "```\n",
     "___"
    ]
@@ -121,7 +128,7 @@
     "sequence 1: ATGCT-CAGA\n",
     "sequence 2: ATG-GTCGG-\n",
     "```\n",
-    "That is, `A` in sequence 1 is aligned to `A` in sequence 2, `T` in sequence 1 is aligned to `T` in sequence 2 and so on.\n",
+    "That is, `A` in sequence 1 is aligned to `A` in sequence 2, `T` in sequence 1 is aligned to `T` in sequence 2, and so on.\n",
     "\n",
     "Use the following scoring system:\n",
     "\n",
@@ -174,13 +181,6 @@
     "    i += 1 # remember to increase the counter by 1 for the while loop\n",
     "print(\"Alignemnt score = \", score)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
