--- a/lectures/Day_2.ipynb
+++ b/lectures/Day_2.ipynb
@@ -1232,9 +1232,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1249,7 +1248,8 @@
     }
    ],
    "source": [
-    "with open('../downloads/genotypes_small.vcf', 'r', encoding = 'utf-8') as fh:\n",
+    "vcf_file = '../downloads/genotypes_small.vcf'\n",
+    "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    counter = 0\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):  \n",
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1299,7 +1299,8 @@
     }
    ],
    "source": [
-    "with open('../downloads/genotypes_small.vcf', 'r', encoding = 'utf-8') as fh:\n",
+    "vcf_file = '../downloads/genotypes_small.vcf'\n",
+    "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
     "            cols = line.strip().split('\\t')\n",
@@ -1323,9 +1324,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1340,7 +1340,8 @@
     }
    ],
    "source": [
-    "with open('../downloads/genotypes_small.vcf', 'r', encoding = 'utf-8') as fh:\n",
+    "vcf_file = '../downloads/genotypes_small.vcf'\n",
+    "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
     "            cols = line.strip().split('\\t')\n",
@@ -1360,7 +1361,7 @@
     }
    },
    "source": [
-    "__Isolate the column that contains the genotype for sample1__"
+    "### Isolate the column that contains the genotype for sample1"
    ]
   },
   {
@@ -1376,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1392,7 +1393,8 @@
     }
    ],
    "source": [
-    "with open('../downloads/genotypes_small.vcf', 'r', encoding = 'utf-8') as fh:\n",
+    "vcf_file = '../downloads/genotypes_small.vcf'\n",
+    "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
     "            cols = line.strip().split('\\t')\n",
@@ -1449,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1465,7 +1467,8 @@
     }
    ],
    "source": [
-    "with open('../downloads/genotypes_small.vcf', 'r', encoding = 'utf-8') as fh:\n",
+    "vcf_file = '../downloads/genotypes_small.vcf'\n",
+    "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
     "            cols = line.strip().split('\\t')\n",
@@ -1502,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1519,7 +1522,8 @@
     }
    ],
    "source": [
-    "with open('../downloads/genotypes_small.vcf', 'r', encoding = 'utf-8') as fh:\n",
+    "vcf_file = '../downloads/genotypes_small.vcf'\n",
+    "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
     "            cols = line.strip().split('\\t')\n",
@@ -1556,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1573,7 +1577,8 @@
     }
    ],
    "source": [
-    "with open('../downloads/genotypes_small.vcf', 'r', encoding = 'utf-8') as fh:\n",
+    "vcf_file = '../downloads/genotypes_small.vcf'\n",
+    "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
     "            cols = line.strip().split('\\t')\n",
