--- a/lectures/Day_3.ipynb
+++ b/lectures/Day_3.ipynb
@@ -669,6 +669,18 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note: we have talked about the `range()` function and have used it in the for loop. for example, \n",
+    "It has more flexibility and be used in many other ways, "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -705,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 174,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
