--- a/lectures/Day_2.ipynb
+++ b/lectures/Day_2.ipynb
@@ -687,10 +687,10 @@
     "    - Python Script: Dump your code into a script\n",
     "    - File I/O: Read from and write to files\n",
     "- __Session 2__:\n",
-    "    - Live coding with problem solving (Exercise after lunch)\n",
+    "    - Variants identification with VCF (Exercise after lunch)\n",
     "- __Session 3__:\n",
     "    - Introduction to the Course Project\n",
-    "    - Project time"
+    "    - Team building - Spaghetti tower"
    ]
   },
   {
@@ -1146,7 +1146,8 @@
     }
    },
    "source": [
-    "## Session 2: Live coding with problem solving"
+    "## Session 2: Variants identification with VCF\n",
+    "- A VCF (Variant Call Format) file is a text file format used in bioinformatics for storing gene sequence variations. "
    ]
   },
   {
@@ -1159,7 +1160,7 @@
    "source": [
     "## How to approach a coding task\n",
     "\n",
-    "### Problem:  \n",
+    "### Task:  \n",
     "You have a VCF file with a number of samples. You are interested in only one of the samples (sample1) and one region (chr5, 1,200,000-1,300,000). What you want to know is whether this sample has any variants in this region, and if so, which variants.\n"
    ]
   },
