--- a/lectures/Day_2.ipynb
+++ b/lectures/Day_2.ipynb
@@ -842,11 +842,43 @@
    },
    "source": [
     "### Read from file\n",
+    "___\n",
     "```python\n",
     "file = open(\"filename.txt\", \"r\")\n",
     "content = file.read()\n",
     "file.close()\n",
-    "```"
+    "```\n",
+    "___\n",
+    "`'r'` specifies the mode for opening the file as a read-only text file. If the file does not exist, a `FileNotFoundError` will be raised.\n",
+    "\n",
+    "Other types of mode:\n",
+    "- `'rb'`: Opens the file as a binary file for reading.\n",
+    "- `'r+`  : Opens the file for reading and writing.\n",
+    "\n",
+    "Extra reading: https://www.w3schools.com/python/python_file_handling.asp\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Use the `with` keyword to ensure the file handle be closed automatically"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "file = open(\"filename.txt\", \"r\")\n",
+    "content = file.read()\n",
+    "file.close()\n",
+    "```\n",
+    "___"
    ]
   },
   {
@@ -867,12 +899,34 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note: ASCII stands for the American Standard Code for Information Interchange. It is a character encoding standard for electronic communication. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Specify `encoding='utf-8'` when opening a file in Python to ensure proper handling of text files that contain non-ASCII characters, such as Chinese characters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
     }
    },
    "source": [
     "```python\n",
-    "with open (\"filename.txt\", \"r\", encoding = 'utf-8') as file\n",
+    "with open (\"filename.txt\", \"r\", encoding='utf-8') as file\n",
     "    content = file.read()\n",
     "```"
    ]
@@ -1074,11 +1128,19 @@
    },
    "source": [
     "### Write to file\n",
+    "___\n",
     "```python\n",
     "file = open(\"output.txt\", \"w\")\n",
     "file.write(\"Hello, Python!\")\n",
     "file.close()\n",
-    "```"
+    "```\n",
+    "___\n",
+    "- `'w'`: Opens a file for writing only. If the file does not exist, it creates a new file. If the file exists, its previous content will be truncated, effectively deleting the content before the new write operations.\n",
+    "\n",
+    "Other modes:\n",
+    "- `'a'`: Opens the file for writing, appending any new data you write to the end of the file's existing content, thus preserving the previous content.\n",
+    "\n",
+    "Extra reading: https://www.w3schools.com/python/python_file_handling.asp"
    ]
   },
   {
